Updated deprecated Class.newInstance() method in LinkedObjectPool